# cortx

./: .alexignore  .alexrc  .all-contributorsrc  .clabot  .env.example  .gitattributes  .gitignore  .gitmodules  .imgbotconfig  .whitesource  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  CORTX Quickstart Guide.rst  CORTXTestimonials.md  CORTX_Quickstart _Guide.rst  CORTX_Quickstart_Guide.rst  Community_Roadmap.md  FAQs  FAQs.md  FeatureRoadmap.md  Feature_Roadmap.md  GLOSSARY.md  QUICK_START.md  QUICK_START.md : Dummy :Testing  QUICK_START.rst  README.md  README.rst  README.v1.rst  SECURITY.md  STM32-CORTX Integration.docx  STM32-CORTX-Integration-Documentation.md  STM32_CORTX_Integration.ipynb  SUPPORT.md  Test file  Troubleshooting.md  commit-signing  doc.sig  package.json  (+5 more)
.github/: CODEOWNERS  config.yml  pull_request_template.md  stale.yml
.github/ISSUES_TEMPLATE/: enhancement.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml
.github/workflows/: alex_recommands.yml  alex_reviewdog.yml  codeql-analysis.yml  dco-check.yml  slack.yml  triage.yml  update-submodules.yml
CortxFilecoinHackathon22/: .env.example  README.md  cortx-s3samplecode-python.py
CortxFilecoinHackathon22/cortx2ipfs/: .gitignore  .prettierrc  .stylelintrc.json  README.md  package.json
CortxFilecoinHackathon22/pyhtonApi/: .codeclimate.yml  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CHANGELOG.md  README.md  package.json  pyproject.toml  setup.cfg  tox.ini
CortxFilecoinHackathon22/pyhtonApi/.github/workflows/: python.yaml
CortxFilecoinHackathon22/pyhtonApi/src/: cortx_s3.py  flask_server.py  ipfs_server.py
app/: bridgeApi.js  cortxSlice.js  counterSlice.js  ipfsSlice.js  store.js
components/: layout.js
components/Aws/: BucketCard.js  CortxBuckets.js
components/Head/: index.js
components/Ipfs/: IpfsCard.js  IpfsInput.js  IpfsLs.js  lsExample.js
components/Spinner/: BezierSpinner.js
cortx-s3samplecode/: README.md
cortx-s3samplecode/curl/: README.md  cortx-s3samplecode-curl.sh
cortx-s3samplecode/go/: README.md  cortx-s3samplecode-go.go
cortx-s3samplecode/node.js/: README.md  cortx-s3samplecode-node.js
cortx-s3samplecode/python/: README.md  cortx-s3samplecode-python.py
cortx-s3samplecode/template/: README.md
cortx-s3server @ edfcb6f/docs/: CORTX-S3 Server Quick Start Guide
doc/: BUILD_ENVIRONMENT.md  Build-Installation-FAQ.md  Build_a_community_version_using_the_same_hardware_as_in_Lyve_Rack.md  CI_CD.md  CORTX on JBOD.rst  CORTX on VA.rst  CORTX on Virtual Appliance.rst  CORTX-Community-Guide.md  CORTX-YouTubeChannel.md  CORTXContributionGuide.md  CORTX_Hackathon.rst  CORTX_on_JBOD.rst  CORTX_on_Open_Virtual_Appliance.rst  CORTX_on_Virtual_Appliance.rst  Cluster_Setup.md  CodeStyle.md  Components.md  ContributingToCortxHA.md  ContributingToCortxPrvsnr.md  ContributingToCortxS3.md  ContributingToCortxSSPL.md  ContributingToMero.md  ContributingToMotr.md  ContributingToS3  ContributingToS3.md  ContributingToSSPL.md  Contributor License Agreement.rst  Cortx S3 Server Quick Start.md  Cortx on VA.rst  CortxHAQuickStart.md  CortxMotrQuickStart.md  CortxProvisionerQuickStart.md  CortxS3ServerQuickStart.md  CortxSSPLQuickStart.md  CyberDuckIO.md  DEV_VM.md  Deploy-Cortx-Build-Stack.md  Deploying a VM. rst  Deploying a VM.rst  Deploying_a_VM.rst  (+61 more)
doc/Community-Build/: Building-CORTX-From-Source-for-SingleNode.md  Generate-Cortx-Build-Stack.md  ProvisionReleaseBuild.md  Setting-up-the-CORTX-Environment-for-SingleNode.md
doc/Demonstrations/: Demonstrations.md
doc/OVA/: ReadMe.md
doc/PDFs/: README.md
doc/RELEASENOTES/: CHANGELOG-1.0.4.md
doc/be/: BE_TheMetadataBackend.md  CORTX-S3OVERVIEW.rst  (+17 more)
hooks/: useIpfsFactory.js
lib/: cortx-s3.js  ipfsUtil.js  s3Util.js
mero/: CONTRIBUTING.md  Kbuild.in  LICENCE  configure.ac  eos-core.spec
mero/extra-libs/galois/: Makefile.am  autogen.sh  configure.ac
mero/extra-libs/galois/doc/: README.html
mero/extra-libs/galois/include/galois/: galois.h
mero/extra-libs/galois/src/: galois.c  gf_div.c  gf_ilog.c  gf_xor.c  gf_xor_tester.c
mero/extra-libs/gf-complete/: configure.ac
mero/extra-libs/gf-complete/include/gf/: gf_int.h  gf_rand.h  gf_w16.h  gf_w4.h
mero/extra-libs/gf-complete/src/: Makefile.am  gf_general.c  gf_w16.c  gf_w64.c  gf_w8.c
mero/extra-libs/gf-complete/src/neon/: gf_w16_neon.c  gf_w32_neon.c  gf_w4_neon.c  gf_w64_neon.c  gf_w8_neon.c
mero/extra-libs/gf-complete/test/: Makefile.am
mero/extra-libs/gf-complete/tools/: Makefile.am  gf_methods.c
metrics/: .gitattributes  CORTX_Metrics_Community_Activity.ipynb  CORTX_Metrics_Compare_Projects.ipynb  CORTX_Metrics_Explore.ipynb  CORTX_Metrics_Graphs.ipynb  CORTX_Metrics_Topline_Report.ipynb  Org_Health.ipynb  README.md  Repo_Health.ipynb  add_label_to_repos.sh  add_repos_to_team.sh  alex_report.py  clean_slack.py  commit_pickles.sh  cortx_community.py  cortx_graphing.py  cortx_people.py  find_unlabeled_issues.py  get_conf_pages.py  get_personal_activity.py  html_to_pdf.py  mk_community_partnership_report.py  open_pull_requests.py  print_metrics.py  quarterly_innersource.sh  query_team.sh  requirements.txt  scrape_metrics.py  scrape_projects.py  scrape_slack.py  set_metric.py  slack.py  slack_api.py  slack_config.ini  slack_user_count.py  update_nonscraped_values.py  weekly_report.sh
ova-releases/: cortx-ova-2.0.0.ova
pages/: _document.js  index.js
s3server/: BUILD  README.md  build_thirdparty.sh  checkcodeformat.sh  dev-starts3-noauth.sh  dev-starts3.sh  dev-statuss3.sh  dev-stops3.sh  installhelper.sh  iss3up.sh  jenkins-build.sh  makeinstall  makerpm.notused  rebuildall.sh  refresh_thirdparty.sh  rpm-deploy.sh  runalltest.sh  s3-sanity-test.sh  s3_log_rotation_guide.txt  s3_obj_layout_mapping.yaml  s3config-test.yaml  s3config.release.yaml  s3config.yaml  s3server_audit_log.properties  s3stats-whitelist-test.yaml  s3stats-whitelist.yaml  s3statsd-config.js  startauth.sh  starts3.sh  starts3multi.sh  statuss3.sh  stops3.sh  stops3multi.sh  update-hosts.sh
styles/: theme.js
(+5031 files in other folders)
