[tool.poetry]
name = "cortxfilecoinhackathon22"
version = "0.1.1"
description = "Submission for the CORTX hackathon 2022."
authors = ["3lLobo <flocwolf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.37"
Flask-SQLAlchemy = "^2.5.1"
black = "^22.3.0"
ipfshttpclient = "^0.7.0"
dotenv = "^0.0.5"
python-dotenv = "^0.20.0"
mypy = "^0.961"
safety = "^1.10.3"
nitpick = "^0.32.0"
[tool.poetry.dependencies.pylint]
version = "*"
optional = true


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.19.0"


[tool.poetry.extras]
lint = ["pylint"]

[tool.black]
line-length = 120
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
